2004-10-29  Marcus Brinkmann  <marcus@gnu.org>

	* Initial commit.
