@@ -10,4 +10,6 @@ ${glibc}/sysdeps/i386/i486/bits/atomic.h	ia32/bits/atomic.h
 ${glibc}/sysdeps/ia64/bits/atomic.h		ia64/bits/atomic.h
 ${glibc}/sysdeps/powerpc/powerpc32/bits/atomic.h powerpc/bits/atomic.h
 ${glibc}/sysdeps/powerpc/powerpc64/bits/atomic.h powerpc64/bits/atomic.h
+${glibc}/sysdeps/powerpc/bits/atomic.h		powerpc/bits/atomic.h
+						powerpc64/bits/atomic.h
 ${glibc}/sysdeps/x86_64/bits/atomic.h		amd64/bits/atomic.h
